# workPiecePlugin

./: CMakeLists.txt  httpManager.cpp  httpManager.h  iniConfig.cpp  iniConfig.h  module.cpp  msgQ.cpp  msgQ.h  workP.cpp  workP.h
workPiece/: .cproject  .project  msgQ.cpp  msgQ.h
